# Hitmux

./: CAL.h  EGECLOCK.h  GAME.h  HELP.h  Hitmux-2.1.0_beta-Windows.cpp  Hitmux-Linux.cpp  Hitmux-Windows.cpp  MINE-ClEARANCE-2.1.3.h  README.md  UI.h  const.cpp  hw.cpp  main.cpp  plugin.h
1.0-stable/: Hitmux-Linux.cpp  Hitmux-Windows.cpp  曹氏加密.cpp  曹氏解密.cpp
1.1.0-bate/: Hitmux-1.1.0-bate-Windows.cpp
1.2.0-stable/: CLOG.h  Change log.txt  HELP.h  Hitmux-1.2.0-stable-Windows.cpp  UI.h
1.2.1-bate/: CAL.h  CLOG.h  GAME.h  HELP.h  Hitmux-1.2.1-bate-Windows.cpp  MINE-ClEARANCE-2.1.3.h  MINE-ClEARANCE.h
1.2.2/: CAL.h  CLOG.h  HELP.h  Hitmux-1.2.2-Windows.cpp  UI.h  X86.h
2.0.0-very_unstable/: CLOG.h  Hitmux-2.0.0-Windows.cpp  MINE-ClEARANCE.h  SYSTEM.h
2.0.1-stable/: CAL.h  CLOG.h  HELP.h  Hitmux-2.0.1_stable-Windows.cpp  SYSTEM.h  X86.h
2.1.0-beta/: GAME.h  Hitmux-2.1.0_beta-Windows.cpp  MINE-ClEARANCE-2.1.3.h  SYSTEM.h  codeing.cmd
EGE24.04/: CMakeLists.txt  CNAME  Explanation.txt  README.md  Release 24.04.txt  ege24.04_all.7z  index.html
Historical_Version/: explanation.txt
Hitsw/: hitsw-1.0-standard-en.md  hitsw-1.0-standard-zh.md  plugin.h
Password-reset/: Password-reset.cpp
Software/: CAL.h  EGECLOCK.h  GAME.h  X86.h  compiler.cpp
Software/Game/: Dino.cpp  MINE-ClEARANCE-2.1.3.h  MINE-ClEARANCE.h
plugins_source/: other.cpp
system/: evn.cpp  fs.cpp  fs2.cpp  init.cpp  log.cpp  sw.cpp  time.cpp
system/safe/: sha256.cpp
user/: login.cpp  manage.cpp  passwd.cpp
